--- a/style.css
+++ b/style.css
@@ -2,9 +2,19 @@
     border-style: solid;
     border-width: 2px;
     border-color: red;
+    height: 250px;
+    width: 200px;
+    background-color: black;
+    margin: auto;
 }
 
 .display{
    
     background-color: aqua;
+}
+.numeric-keys{
+    display: flex;
+}
+.operations{
+    display: flex;
 }
