--- a/style.css
+++ b/style.css
@@ -1,20 +1,79 @@
+body{
+  font-family: "Roboto Mono", monospace;
+}
+h1{
+  text-align: center;
+
+}
 .calculator{
-    border-style: solid;
-    border-width: 2px;
-    border-color: red;
-    height: 250px;
-    width: 200px;
-    background-color: black;
-    margin: auto;
+  border-radius: 10px;
+  box-shadow: 0px 3px 6px 0px rgba(0, 0, 0, 0.15), 0px 2px 4px 0px rgba(0, 0, 0, 0.12);
+  margin-inline-start: auto;
+  margin-inline-end: auto;
+  margin-block-start: 2em;
+  max-inline-size: 22rem;
+  overflow: hidden;
+  color: hsl(202, 11%, 29%);
+  background-color: hsl(78, 0%, 28%);
 }
 
 .display{
-   
-    background-color: aqua;
+  background-color: hsl(78, 0%, 37%);  
+  color: hsl(255, 100%, 100%);
+  font-size: 4.2rem;
+  padding-block-start: 3rem;
+  padding-block-end: 0.5rem;
+  padding-inline-end: 1.25rem;
+  text-align: end;
+    
 }
-.numeric-keys{
+.operators{
     display: flex;
+    flex-direction: column;
+    padding: 0.5rem;
 }
-.operations{
+.numeric-keys,
+.operations
+{
+   display: flex;
+   flex-wrap: wrap;
+   justify-content: space-between; 
+}
+button{
+    background-color: hsl(78, 0%, 47%);
+    border: none;
+    padding: 1rem;
+    font-size: 1.5rem;
+    inline-size: 70px;
+    block-size: 70px;
+    margin: 0.25rem;
+    border-radius: 40px;
     display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    color: aliceblue;
 }
+
+button:active,
+button:focus{
+    box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.3) inset;
+  outline: none;
+}
+.op {
+    background-color: hsl(78, 0%, 47%);
+  }
+  
+  .op:active {
+    background-color: hsl(78, 0%, 47%);
+  }
+  .clear,
+  .equal {
+    background: hsl(216, 76%, 53%);
+    
+  }
+  
+  .backspace {
+    background: hsl(216, 76%, 53%);
+    flex-grow: 1;
+  }
